[package]
name = "mot"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.10.2"
rosc = "0.11.4"
clap = "4.5.47"
rand = "0.8.5"
once_cell = "1.17.0"
mdns-sd = "0.15.0"
hostname = "0.4"
ctrlc = "3.4"
flume = "0.11"